# cmdash

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
crates/cmdash/: Cargo.toml  config.kdl
crates/cmdash-config/: Cargo.toml
crates/cmdash-config/src/: lib.rs  theme.rs
crates/cmdash-config/tests/: round_trip.rs
crates/cmdash-config/tests/fixtures/: config.kdl
crates/cmdash-keybinds/: Cargo.toml
crates/cmdash-keybinds/src/: lib.rs
crates/cmdash-layout/: Cargo.toml
crates/cmdash-layout/src/: lib.rs
crates/cmdash-layout/tests/: round_trip.rs
crates/cmdash-protocol/: Cargo.toml
crates/cmdash-protocol/src/: lib.rs
crates/cmdash-pty/: Cargo.toml
crates/cmdash-pty/src/: lib.rs  scrollback_tests.rs
crates/cmdash-pty/tests/: round_trip.rs
crates/cmdash-widget-sdk/: Cargo.toml
crates/cmdash-widget-sdk/src/: lib.rs
crates/cmdash/examples/: gen_fixture.rs
crates/cmdash/src/: clipboard.rs  frontend_task.rs  graphics.rs  layer_id.rs  lib.rs  main.rs  pane.rs  protocol.rs  render.rs  script_widget.rs  server_task.rs  status_bar.rs  tabs.rs  test_helpers.rs  test_pty.rs  test_utils.rs  tick_context.rs
crates/cmdash/tests/: copy_mode.rs  focus_reporting_pty.rs  mode_transitions.rs  osc52_integration.rs  script_widget_integration.rs  tab_operations.rs  widget_sdk_integration.rs  wiring_smoke.rs
docs/: 1.0-checklist.md  ci-evidence.md  configuration.md  roadmap.md  session-persistence-architecture.md
examples/: 01-minimal.kdl  02-two-pane-split.kdl  03-stack-and-zstack.kdl  04-four-pane-tiled.kdl  05-per-pane-commands.kdl  06-widget-clock.kdl  07-script-widget.kdl  08-status-bar.kdl  09-theme.kdl  10-osc8-hyperlinks.kdl  11-sixel-test.kdl  12-kitty-test.kdl  graphics-test-emitter.sh  print-hyperlinks.sh
examples/widget-clock/: Cargo.toml  README.md
examples/widget-clock/src/: lib.rs
examples/widgets/: uptime.py
scripts/: gpg-cmdash-wrapper.README.md  gpg-cmdash-wrapper.sh  verify-kitty.sh  verify-sixel.sh
tests/: check-doc-numbering.py  justfile-parse.sh  lint-doc.sh
tests/fixtures/: test_script_widget.sh
