[package]
name = "cmdash-config"
description = "KDL types + parser for cmdash configs (layouts, keybinds, presets)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kdl = "6.3.4"
ratatui = "0.30.2"
thiserror = "2.0.18"
