[package]
name = "cmdash-keybinds"
description = "Modifier-aware key router with named modes and a typed action enum."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cmdash-config = { version = "0.1.0", path = "../cmdash-config" }
crossterm = "0.29.0"
