[package]
name = "cmdash-pty"
description = "portable-pty + vte text grid; intercepts kitty graphics commands bound to originating pane LayerId."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
libc = "0.2.186"
portable-pty = "0.9.0"
thiserror = "2.0.18"
tracing = "0.1.44"
vte = "0.15.0"
